<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:padding="16dp"
    tools:context=".view.LoginActivity">

  <TextView
      android:id="@+id/tvWelcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="144dp"
      android:fontFamily="@font/montserrat_bold"
      android:text="@string/welcome_to_snapmap"
      android:textColor="@color/appTitle"
      android:textSize="30sp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.491"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etUsername"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="132dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:fontFamily="@font/montserrat"
      android:hint="@string/username"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.937"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

  <EditText
      android:id="@+id/etPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:fontFamily="@font/montserrat"
      android:hint="@string/password"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etUsername" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:backgroundTint="@color/items"
      android:textColor="@color/textButton"
      android:text="@string/login"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etPassword"
      app:layout_constraintVertical_bias="0.108" />

  <TextView
      android:id="@+id/tvRegisterLink"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:text="@string/don_t_have_an_account_yet_create_an_account"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin"
      app:layout_constraintBottom_toTopOf="@+id/btnRegister"/>

  <Button
      android:id="@+id/btnRegister"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/register"
      android:textColor="@color/textButton"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvRegisterLink"
      android:backgroundTint="@color/items"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
